--- a/Assets/Game/Runtime/Domain/GameRules/Game.Runtime.Domain.GameRules.asmdef
+++ b/Assets/Game/Runtime/Domain/GameRules/Game.Runtime.Domain.GameRules.asmdef
@@ -1,4 +1,4 @@
 {
 	"name": "Game.Runtime.Domain.GameRules",
-	"references":[ "GUID:d94d9b16b9c5948fd835dbc3a5b649a0" ]
+	"references":[ "GUID:d94d9b16b9c5948fd835dbc3a5b649a0", "GUID:e9ab71342790d456d9712398c05d48ea" ]
 }
