--- a/Assets/Game/Runtime/Infrastructure/Configs/Game.Infrastructure.Configs.asmdef
+++ b/Assets/Game/Runtime/Infrastructure/Configs/Game.Infrastructure.Configs.asmdef
@@ -2,7 +2,8 @@
     "name": "Game.Infrastructure.Configs",
     "rootNamespace": "",
     "references": [
-        "GUID:f51ebe6a0ceec4240a699833d6309b23"
+        "GUID:f51ebe6a0ceec4240a699833d6309b23",
+        "GUID:e229c899af2e9ca4d873362f899b984b"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
