--- a/Assets/Game/Runtime/Application/Planet/Game.Application.Planet.asmdef
+++ b/Assets/Game/Runtime/Application/Planet/Game.Application.Planet.asmdef
@@ -1,4 +1,4 @@
 {
 	"name": "Game.Application.Planet",
-	"references":[ "GUID:e229c899af2e9ca4d873362f899b984b", "GUID:199178b5e1e891e4884680ce9211ca09", "GUID:d94d9b16b9c5948fd835dbc3a5b649a0", "GUID:e9ab71342790d456d9712398c05d48ea" ]
+	"references":[ "GUID:e229c899af2e9ca4d873362f899b984b", "GUID:199178b5e1e891e4884680ce9211ca09", "GUID:d94d9b16b9c5948fd835dbc3a5b649a0", "GUID:e9ab71342790d456d9712398c05d48ea", "GUID:c57babf6c6111470285ffd59652da442", "GUID:30a6220fd9e6c4bc1aeb16c9a974db85", "GUID:a56dc601bdfa5374fae82300d1877772" ]
 }
