--- a/Assets/Game/Runtime/Presentation/GamePanel/Game.Presentation.GamePanel.asmdef
+++ b/Assets/Game/Runtime/Presentation/GamePanel/Game.Presentation.GamePanel.asmdef
@@ -5,7 +5,9 @@
         "GUID:b4ad143ca072d4f6791393b00d49dc00",
         "GUID:6055be8ebefd69e48b49212b09b47b2f",
         "GUID:febaf25a60dafbd44941357b21678606",
-        "GUID:a42c64b2b45190347903076a017fce90"
+        "GUID:a42c64b2b45190347903076a017fce90",
+        "GUID:e229c899af2e9ca4d873362f899b984b",
+        "GUID:1c3515991941a194bb1305beea8a8a26"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
