Changed Planet Income logic and open PlanetPanel

--- a/Assets/Game/Runtime/Application/Initialization/Game.Application.Initialization.asmdef
+++ b/Assets/Game/Runtime/Application/Initialization/Game.Application.Initialization.asmdef
@@ -8,7 +8,8 @@
         "GUID:9472c861d4b6649b1b235fc6633cdad1",
         "GUID:30a6220fd9e6c4bc1aeb16c9a974db85",
         "GUID:f51ebe6a0ceec4240a699833d6309b23",
-        "GUID:b0214a6008ed146ff8f122a6a9c2f6cc"
+        "GUID:b0214a6008ed146ff8f122a6a9c2f6cc",
+        "GUID:199178b5e1e891e4884680ce9211ca09"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
